src/css/style/blocks/_landing.scss
.landing{
	width: 100%;
	display: flex;
	flex-direction: row;
	align-items: flex-start;
	justify-content: space-between;
	background-color: $gray_f3f;
}

.landing__content-wrapper{
	width: 100%;
	height: 100vh;
	overflow-x: hidden;
	overflow-y: scroll;
	display: flex;
	flex-direction: column;
	align-items: flex-end;
	@include media-breakpoint-up(lg) {
		max-width: none;
		margin-left: -$aside-tooltip-width;	
		margin-right: -$aside-tooltip-width;
		padding-left: $aside-tooltip-width;
	}    	
}

.landing__content{
	display: flex; /*fix бага ie11 с min-height:100%*/
	flex-direction: column;
}

.landing__header{
	position: absolute;
	z-index: 2;
	top: 0;
	left: 0;
	width: 100%;
	color: $white;
	& > .page__wrapper{
		padding-left: 30px;
		padding-right: 30px;
		padding-top: 20px;
		padding-bottom: 20px;
		display: flex;
		flex-direction: row;
		align-items: center;
		justify-content: space-between;
	}
	.landing__logo{
		width: 131px;
		height: 40px;
		margin-right: 60px;
		flex-shrink: 0;
	}
	.header__info{
		display: none;
		white-space: nowrap;
	}
	.info__phone{
		color: $white;
		font-family: 'Exo2';
		font-size: 18px;
		&:hover{
			color: $white;
		}
	}
	.info__schedule{
		font-size: 12px;
		opacity: 0.6;
	}
	.button--primary{
		display: none;		
	}
	.btn-link{
		color: $white;
		.icon{
			width: 25px;
			height: 25px;
		}
	}
	.slider__pagination{
		position: static;
		display: none;
	}
	@include media-breakpoint-up(md) {
		.header__info{
			display: block;
		}
		.button--primary{
			display: block;		
		}
	}
	@include media-breakpoint-up(lg) {
		.header__info{
			margin-right: auto;
		}
		.button--primary{
			display: none;		
		}
		.btn-link{
			display: none;
		}
		.slider__pagination{
			display: block;
		}		
	}			
}


.landing__content--shifted{
	width: 100vw;
	max-width: none;
	& * {
		max-width: none;
	}
}

.landing__aside-wrapper{
	width: 340px;
	transition: width $anim-dur;
	flex-shrink: 0;	
	height: 100vh;
	display: flex; /*fix бага ie11*/
	flex-direction: column;	
	overflow-y: scroll;
	overflow-x: hidden !important; /*???*/
	.ps__rail-x{
		display: none;
	}
}

.landing__aside{
	flex-shrink: 0;
	min-height: 100vh;
	width: 350px;
	max-width: none;
	padding-top: 30px;
	padding-bottom: 30px;
	padding-left: 40px;
	padding-right: 40px;
	position: relative;
	z-index: 2;
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	justify-content: flex-start;
	&::before{
		content: '';
		display: block;
		position: absolute;
		z-index: 1;
		top: 0;
		left: $aside-tooltip-width;
		width: 100%;
		height: 100%;
		background-color: $white;
		box-shadow: -3px 0px 8px rgba(0, 0, 0, 0.08)
	}	
	.info__phone{
		font-size: 18px;
		line-height: 1.2;
		margin-bottom: 6px;
	}
	.info__schedule{
		font-size: 12px;
		color: $gray_282;
		margin-bottom: 20px;
	}	
	.info__copy{
		font-size: 12px;
		color: $gray_747;
	}
	@include media-breakpoint-up(lg) {
		padding-left: 40px + $aside-tooltip-width;
	}	
}

.landing__aside-header{
	width: 100%;
	display: flex;
	flex-direction: column;
	align-items: flex-end;
	justify-content: flex-end;
	margin-bottom: 40px;
	flex-shrink: 0;
	position: relative;
	z-index: 2;
	.btn-link{
		padding-right: 0;
		color: $gray_282;
		.icon{
			width: 25px;
			height: 25px;			
		}
	}
	@include media-breakpoint-up(lg) {
		.btn-link{
			display: none;
		}
	}
}

.landing__aside-main{
	flex-grow: 1;
	width: 100%;
	position: relative;
	z-index: 2;
}

.landing__aside-footer{
	width: 100%;
	border-top: 1px solid;
	border-color: rgba(0, 0, 0, 0.1);
	padding-top: 20px;
	flex-shrink: 0;
	position: relative;
	z-index: 2;
	@include media-breakpoint-up(lg) {
		padding-top: 30px;
	}		
}

.landing__aside-menu{
	max-width: none;
	margin-left: -40px;
	margin-right: -40px;
	color: $gray_747;
	font-size: 14px;
	.menu__item{	
		padding-left: 40px;
		padding-right: 40px;
		padding-top: 20px;
		padding-bottom: 20px;
		position: relative;
		.link{
			font-size: 18px;
			font-family: 'Exo2';
			font-weight: $fw-bold;
			display: inline;
			color: $gray_282;
			text-decoration: none;
			border-bottom: 1px solid;
			border-bottom-color: rgba(70, 147, 75, 0.3);
			border-bottom-style: dotted;
			line-height: 1.2;
			&:hover{
				color: $green_469;
			}
		}
	}
	.menu__item--active{
		background-color: $gray_f3f;
		color: $gray_282;
		&::before{
			content: '';
			display: block;
			position: absolute;
			left: -$aside-tooltip-width;
			top: 25px;
			width: $aside-tooltip-width;
			height: 22px;
			background-image: url("data:image/svg+xml,%3Csvg width='18' height='40' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 20L18 .081V39.92L0 20z' fill='%23F3F3F3'/%3E%3C/svg%3E");
			background-position: top left;
			background-repeat: no-repeat;
			background-size: 10px 22px;
		}
		.link{
			border: none;
			color: $green_469;
		}		
	}
	@include media-breakpoint-up(lg) {

	}	
}

.landing__aside--hidden{
	width: 0;
	@include media-breakpoint-up(lg) {
		width: auto;
	}
}

.landing__section{
	min-height: 100vh;
	flex-shrink: 0;
}

